Some controllers renamed and some rest api methods changed.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,8 @@
+## CATEGORIES MESSAGES
+category.created = El tipo de categoría ha sido creado con éxito, el identificador generado es <%d>
+category.not.found = El tipo de categoría con identificador <%d> no existe en la base de datos
+category.activated = El tipo de categoría con identificador <%d> fue activado con éxito
+category.inactivated = El tipo de categoría con identificador <%d> fue inactivado con éxito
+category.field.required = El campo <%s> no es válido
+## COMMON MESSAGES
 fileservice.upload = El archivo ha sido almacenado con éxito, identificador generado para la solicitud: <%s>.
