Messages constants loaded from properties file.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,4 +5,6 @@ category.activated = El tipo de categoría con identificador <%d> fue activado c
 category.inactivated = El tipo de categoría con identificador <%d> fue inactivado con éxito
 category.field.required = El campo <%s> no es válido
 ## COMMON MESSAGES
-fileservice.upload = El archivo ha sido almacenado con éxito, identificador generado para la solicitud: <%s>.
+default.username = Juan Camilo Velásquez
+## DATE MESSAGES
+date.format.not.valid = La fecha <%s> no se encuentra en el formato <%s>
