Messages component used at Movement service.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,14 +3,21 @@ category.created = El tipo de categoría ha sido creado con éxito, el identific
 category.not.found = El tipo de categoría con identificador <%d> no existe en la base de datos
 category.activated = El tipo de categoría con identificador <%d> fue activado con éxito
 category.inactivated = El tipo de categoría con identificador <%d> fue inactivado con éxito
+
 ## TYPES MESSAGES
 type.activated = El tipo de movimiento con identificador <%d> fue inactivado con éxito
 type.created = El tipo de movimiento ha sido creado con éxito, el identificador generado es <%d>
 type.exists = El tipo de movimiento con descripción <%s> ya existe en la base de datos
 type.inactivated = El tipo de movimiento con identificador <%d> fue inactivado con éxito
 type.not.found = El tipo de movimiento con identificador <%d> no existe en la base de datos
+
+## MOVEMENTS MESSAGES
+movement.not.found = Movimiento creado con éxito, identificador generado es <%d>
+movement.created = Movimiento creado con éxito, identificador generado es <%d>
+
 ## DEFAULT VALIDATIONS
 default.field.required = El campo <%s> no es válido
+
 ## COMMON MESSAGES
 default.username = Juan Camilo Velásquez
 ## DATE MESSAGES
