Some messages added.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,7 @@ default.field.required = El campo <%s> no es válido
 default.username = Juan Camilo Velásquez
 ## DATE MESSAGES
 date.format.not.valid = La fecha <%s> no se encuentra en el formato <%s>
+
+## REPORTS
+excel.error.reading = Ocurrió un error intentando leer el archivo de excel
+excel.error.generating = Error generando excel
