Messages loaded by default language.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,6 @@ date.format.not.valid = La fecha <%s> no se encuentra en el formato <%s>
 ## REPORTS
 excel.error.reading = Ocurrió un error intentando leer el archivo de excel
 excel.error.generating = Error generando excel
+
+## CHARTS
+charts.error.bytes = Ocurrió un error obteniendo los bytes para la gráfica
