PDF report messages updated.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ date.format.not.valid = La fecha <%s> no se encuentra en el formato <%s>
 ## REPORTS
 excel.error.reading = Ocurrió un error intentando leer el archivo de excel
 excel.error.generating = Error generando excel
+pdf.error.generating = Ocurrió un error en la generación del PDF
 
 ## CHARTS
 charts.error.bytes = Ocurrió un error obteniendo los bytes para la gráfica
